--- a/bin/main/application.yaml
+++ b/bin/main/application.yaml
@@ -2,9 +2,9 @@ server:
     port: 8091
 spring:
     datasource:
-        url: jdbc:mysql://localhost:3306/resumelk?useSSL=false
+        url: jdbc:mysql://localhost:3306/resumelk?useSSL=false&allowPublicKeyRetrieval=true
         username: indika
-        password: "w0lfman#77D"
+        password: "w0lfman"
     jpa:
         show-sql: true
         hibernate:
